--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.0",
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "eslint": "^8.33.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1"
   }
 }
