--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["cypress", "node"]
   },
-  "include": ["src"]
+  "exclude": [
+    "node_modules",
+  ],
+  "include": [
+    "src",
+  ]
 }
