--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "start:server": "cd ../meowsletter-api && npm run start",
     "dev": "concurrently --kill-others \"npm:start:server\" \"npm:start\"",
     "build": "react-scripts build",
-    "test": "cypress open",
+    "cypress": "cypress open",
+    "test": "cypress run --component",
+    "test:accessibility": "concurrently --kill-others \"npm:start\" \"cypress run\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,8 +49,10 @@
     "@cypress/code-coverage": "^3.10.0",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.0",
+    "axe-core": "^4.6.3",
     "concurrently": "^7.6.0",
     "cypress": "^12.5.1",
+    "cypress-axe": "^1.3.0",
     "eslint": "^8.33.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "react-test-renderer": "^18.2.0"
