--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["cypress", "node"]
+    "types": ["cypress", "cypress-axe", "node"]
   },
-  "exclude": [
-    "node_modules",
-  ],
-  "include": [
-    "src",
-  ]
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
